
====================================================================
Note, as of release 0.73, all checkins should be accompanied with a
Bug ID. The bug IDs relate to sourceforge IDs.. You can query the
related bug description with the following URL:

 http://sourceforge.net/bugs/?func=detailbug&bug_id=XXXXX&group_id=6663

Where you should replace XXXXX with a bug-id.
====================================================================

0.75: please submit patches for this section with actual code/doc
      patches!

                          ** WARNING **

This release contains backwardly incompatible changes to
libpam. Prior versions were buggy - see bugfix for Bug 129775.

                          ** WARNING **

* fixed URL for original RFC to a cached kernel.org file. (Bug 131503
  - agmorgan)
* quoted the $CRACKLIB_DICTPATH test in configure.in (Bug 130130 -
  agmorgan).
* improved handling of the setcred/close_session and update chauthtok
  stack. *Warning* This is a backwardly incompatable change, but 'more
  sane' than before. (Bug 129775 - agmorgan).
* bumped the version number, and added some code to assist in making
  documentation releases (Bug 129644 - agmorgan).

0.74: Sun Jan 21 22:36:08 PST 2001

* made 0.74 release (Bug 129642 - agmorgan)
* libpam - cleaned up a few non-static functions to be static and added
  support for libpam to enforce things like pam_[gs]et_data() and
  AUTHTOK rules for using the API. Also documented pam_[gs]et_item()
  a little better including return codes (Bugs 129027, 128576 -
  agmorgan).
* pam_access - fixed the non-default config file option (Bug 127561 -
  agmorgan)
* pam.8 manual page clarified with respect to the default location for
  finding modules, also added some text describing the [...] control
  syntax. (Bug 127625 - agmorgan)
* md5.h ia64 fixes for pam_unix and pam_pwdb (Bug 127700 - agmorgan)
* removed requirement for c++ from the configure{.in,} files (Bug
  128298 - agmorgan)