@@ -86,6 +86,8 @@ DYNTYPE=@DYNTYPE@
 LIBDL=@LIBDL@
 MKDIR=@MKDIR@
 INSTALL=@INSTALL@
+RANLIB=@RANLIB@
 STRIP=@STRIP@
+CC_STATIC=@CC_STATIC@
 
 LINKLIBS = $(NEED_LINK_LIB_C) $(LIBDL)
