@@ -30,6 +30,11 @@ related bug description with the following URL:
  http://sourceforge.net/bugs/?func=detailbug&bug_id=XXXXX&group_id=6663
 
 Where you should replace XXXXX with a bug-id.
+
+If you have found a bug in Linux-PAM, please consider filing such a
+bug report (see the 'submit bug' button on this page):
+
+ http://sourceforge.net/bugs/?group_id=6663
 ====================================================================
 
 0.75: please submit patches for this section with actual code/doc
@@ -42,6 +47,8 @@ libpam. Prior versions were buggy - see bugfix for Bug 129775.
 
                           ** WARNING **
 
+* fixes for static library builds and also the examples when linked
+  with the debugging build of the libraries. (Bug 131783 - agmorgan)
 * fixed URL for original RFC to a cached kernel.org file. (Bug 131503
   - agmorgan)
 * quoted the $CRACKLIB_DICTPATH test in configure.in (Bug 130130 -
